--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -53,13 +53,13 @@
 <p>
   <fa-icon [icon]="faUserGraduate" [size]="'lg'" class="mr-3"></fa-icon>
   {{'SIDEBAR_COMPARE_ABOUT_2_1' | translate}}
-  <a href="mailto:simone1.mayer@student.uni-augsburg.de"
-     target="_blank"
+  <a container="body"
      data-toggle="tooltip"
-     openDelay="1000"
-     container="body"
+     href="mailto:simone1.mayer@student.uni-augsburg.de"
      ngbTooltip="{{'MAIN_INFO_TT_MAIL_MAYER' | translate}}"
-     placement="{{layoutService.layout.main.tooltipDirection}}">
+     openDelay="1000"
+     placement="{{layoutService.layout.main.tooltipDirection}}"
+     target="_blank">
     <b>Simone Mayer</b>
   </a>
   {{'SIDEBAR_COMPARE_ABOUT_2_2' | translate}}
@@ -67,14 +67,14 @@
 <p>
   <fa-icon [icon]="faComments" [size]="'lg'" class="mr-3"></fa-icon>
   {{'SIDEBAR_COMPARE_ABOUT_3_1' | translate}}
-  <a href="mailto:florian.auer@informatik.uni-augsburg.de"
-     id="mailto"
-     target="_blank"
+  <a container="body"
      data-toggle="tooltip"
-     openDelay="1000"
-     container="body"
+     href="mailto:florian.auer@informatik.uni-augsburg.de"
+     id="mailto"
      ngbTooltip="{{'MAIN_INFO_TT_MAIL_AUER' | translate}}"
-     placement="{{layoutService.layout.main.tooltipDirection}}">
+     openDelay="1000"
+     placement="{{layoutService.layout.main.tooltipDirection}}"
+     target="_blank">
     <b>Florian Auer</b>
   </a>
   {{'SIDEBAR_COMPARE_ABOUT_3_2' | translate}}
