--- a/src/app/components/parts/sidebar-edit-selected/sidebar-edit-selected.component.html
+++ b/src/app/components/parts/sidebar-edit-selected/sidebar-edit-selected.component.html
@@ -1,65 +1,58 @@
-<!-- selected nodes or edges -->
-<div *ngIf="type && selectedElements.length > 0">
+<h4 (click)="container.toggle()"
+    *ngIf="selectedElements.length > 0"
+    [attr.aria-expanded]="!collapsedContainer"
+    aria-controls="container"
+    class="alert alert-secondary cursor">
+  {{ 'SIDEBAR_EDIT_COMPARISON_' + type | translate}}
+</h4>
 
-  <div class="row">
-    <div class="col">
-      <h5>{{'SIDEBAR_EDIT_COMPARISON_' + type | translate}}</h5>
-    </div>
-    <div class="col">
-      <span class="float-right cursor"
-            (click)="collapseSelection.toggle()"
-            [attr.aria-expanded]="!isCollapsedSelection"
-            aria-controls="collapseExample">
-        <fa-icon [icon]="faChevronDown"></fa-icon>
-      </span>
-    </div>
-  </div>
-
+<div #container="ngbCollapse"
+     [(ngbCollapse)]="collapsedContainer"
+     class="p-2">
 
   <!-- TABLE -->
-  <div #collapseSelection="ngbCollapse" [ngbCollapse]="isCollapsedSelection">
-    <div class="table-responsive">
+  <div class="table-responsive">
+    <table class="table">
 
-      <table class="table">
+      <thead>
+      <tr>
+        <td *ngFor="let element of selectedElements">
+          <a (click)="graphService.highlightByElementId(element.id)"
+             class="float-right"
+             container="body"
+             data-toggle="tooltip"
+             ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_' + type | translate}} {{element.id}}"
+             openDelay="1000"
+             placement="{{layoutService.layout.sidebar.tooltipDirection}}"
+             role="button">
+            <b>{{element.name}} ({{element.id}})</b>
+          </a>
+        </td>
+      </tr>
+      </thead>
 
-        <thead>
-        <tr>
-          <td *ngFor="let element of selectedElements">
-            <a (click)="graphService.highlightByElementId(element.id)"
-               data-toggle="tooltip"
-               openDelay="1000"
-               container="body"
-               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_' + type | translate}} {{element.id}}"
-               placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-               role="button"
-               class="float-right">
-              <b>{{element.name}} ({{element.id}})</b>
-            </a>
-          </td>
-        </tr>
-        </thead>
+      <tbody>
+      <tr>
 
-        <tbody>
-        <tr>
+        <td *ngFor="let element of selectedElements; let elementIndex = index">
+          <table class="table table-borderless">
 
-          <td *ngFor="let element of selectedElements; let elementIndex = index">
-            <table class="table table-borderless">
+            <tr *ngFor="let prop of relevantProperties">
 
-              <tr *ngFor="let prop of relevantProperties">
+              <td *ngIf="elementIndex === 0" colspan="3"><b>{{prop}}</b></td>
+              <td *ngIf="element[prop] !== undefined" class="w-100 text-right">{{element[prop]}}</td>
+              <td *ngIf="element[prop] === undefined" class="w-100 text-right">&nbsp;</td>
 
-                <td *ngIf="elementIndex === 0" colspan="3"><b>{{prop}}</b></td>
-                <td class="w-100 text-right" *ngIf="element[prop] !== undefined">{{element[prop]}}</td>
-                <td class="w-100 text-right" *ngIf="element[prop] === undefined">&nbsp;</td>
+            </tr>
 
-              </tr>
+          </table>
+        </td>
+      </tr>
+      </tbody>
 
-            </table>
-          </td>
-        </tr>
-        </tbody>
-
-      </table>
-    </div>
+    </table>
   </div>
+
 </div>
+
 
