--- a/src/app/components/sidebar-image/sidebar-image.component.html
+++ b/src/app/components/sidebar-image/sidebar-image.component.html
@@ -1,30 +1,48 @@
-<div class="p-2">
+<h5>
+  {{'SIDEBAR_IMAGE_TITLE' | translate}}
+</h5>
 
-  <h5>
+<p>{{'SIDEBAR_IMAGE_GENERAL' | translate}}</p>
 
-    <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
-       class="mb-1"
-       data-toggle="tooltip"
-       ngbTooltip="{{'NAV_MANAGE' | translate}}"
-       placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-       role="button"
-       type="button">
-      <fa-icon [icon]="faArrowLeft" class="mr-1"></fa-icon>
-    </a>
-    {{'SIDEBAR_IMAGE_TITLE' | translate}}
-  </h5>
+<form>
 
-  <p>{{'SIDEBAR_IMAGE_GENERAL' | translate}}</p>
+  <div class="mb-2 row">
 
-  <form>
+    <!-- TYPE -->
+    <div class="col-6">
+      <div class="btn-group btn-block">
+        <button aria-expanded="false" aria-haspopup="true"
+                class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" type="button">
+          {{'SIDEBAR_IMAGE_SELECT_TYPE' | translate}}&nbsp;{{selectedFileType}}
+        </button>
+        <div class="dropdown-menu btn-block">
+          <a (click)="selectImageType(option)"
+             *ngFor="let option of fileTypeOptions"
+             class="dropdown-item">{{option}}</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="row mb-2">
+    <!-- DOWNLOAD -->
+    <div class="col-6">
+      <button (click)="downloadImage()" *ngIf="selectedFileType"
+              class="btn btn-block btn-success">
+        {{'SIDEBAR_IMAGE_BTN_DOWNLOAD' | translate}}
+      </button>
 
+    </div>
+
+  </div>
+
+  <!-- DOWNLOAD OPTIONS -->
+  <div *ngIf="selectedFileType !== 'CX'">
+
+    <div class="row">
       <div class="col-6">
 
         <!-- Labels -->
         <div class="form-check">
-          <input (click)="toggleLabels(!dataService.getSelectedNetwork().showLabels)"
+          <input (click)="graphService.toggleLabels(!dataService.getSelectedNetwork().showLabels)"
                  [checked]="dataService.getSelectedNetwork().showLabels"
                  class="form-check-input" id="imgShowLabels"
                  type="checkbox">
@@ -40,30 +58,13 @@
                  value="">
           <label class="form-check-label" for="fullViewportInput">
             {{'SIDEBAR_IMAGE_FULL' | translate}}
-          </label>
+          </label><br>
           <small>{{'SIDEBAR_IMAGE_FULL_HINT' | translate}}</small>
         </div>
-
       </div>
 
       <div class="col-6">
-        <button aria-expanded="false"
-                aria-haspopup="true"
-                class="btn btn-block btn-outline-success dropdown-toggle" data-toggle="dropdown" type="button">
-          {{selectedFileType || 'SIDEBAR_IMAGE_SELECT_TYPE' | translate}}
-        </button>
-        <div class="dropdown-menu">
-          <a (click)="selectImageType(option)" *ngFor="let option of fileTypeOptions"
-             class="dropdown-item">{{option}}</a>
-        </div>
 
-      </div>
-
-    </div>
-
-    <div class="form-row mb-2">
-
-      <div class="col-6">
         <!-- BG white vs transparent: only for PNG -->
         <div class="form-check">
           <input [(ngModel)]="optUseBg"
@@ -77,64 +78,67 @@
             {{'SIDEBAR_IMAGE_BG' | translate}}
           </label>
         </div>
-      </div>
 
-      <div *ngIf="optUseBg" class="col-2">
-        <button (click)="this.optBg = dataService.getBackgroundColor()" class="btn btn-outline-secondary">
-          <fa-icon [icon]="faRedo"></fa-icon>
-        </button>
-      </div>
+        <div class="row">
 
-      <div [ngClass]="optUseBg ? 'col-4' : 'col-6'">
+          <!-- RESET BG COLOR -->
+          <div *ngIf="optUseBg" class="col-4">
+            <button (click)="this.optBg = dataService.getBackgroundColor()"
+                    [disabled]="selectedFileType === 'CX'"
+                    class="btn btn-sm btn-block btn-outline-secondary">
+              <fa-icon [icon]="faRedo"></fa-icon>
+            </button>
+          </div>
 
-        <input *ngIf="optUseBg"
-               [(ngModel)]="optBg"
-               class="form-control form-control-color"
-               id="colorBg"
-               name="colorBg"
-               type="color"
-               value="{{optBg}}">
+          <div class="col-8">
 
-        <small *ngIf="selectedFileType !== 'PNG' && !optUseBg">{{'SIDEBAR_IMAGE_BG_HINT' | translate}}</small>
-        <small *ngIf="selectedFileType === 'PNG' && !optUseBg">{{'SIDEBAR_IMAGE_BG_PNG_HINT' | translate}}</small>
+            <!-- SET BG COLOR -->
+            <input *ngIf="optUseBg"
+                   [(ngModel)]="optBg"
+                   [disabled]="selectedFileType === 'CX'"
+                   class="form-control form-control-color"
+                   id="colorBg"
+                   name="colorBg"
+                   type="color"
+                   value="{{optBg}}">
+
+            <!-- HINT BG COLOR -->
+            <small *ngIf="selectedFileType !== 'PNG' && !optUseBg">
+              {{'SIDEBAR_IMAGE_BG_' + (selectedFileType === 'PNG' ? 'PNG_' : '') + 'HINT' | translate}}
+            </small>
+          </div>
+        </div>
+
       </div>
 
     </div>
 
     <div class="row mb-2">
+      <!-- WIDTH -->
       <div class="col-6">
         <label for="widthInput">{{'SIDEBAR_IMAGE_WIDTH' | translate}}</label>
-        <input [(ngModel)]="optWidth" class="form-control" id="widthInput" name="widthInput" type="number">
+        <input [(ngModel)]="optWidth" [disabled]="selectedFileType === 'CX'" class="form-control" id="widthInput" name="widthInput"
+               type="number">
       </div>
+
+      <!-- HEIGHT -->
       <div class="col-6">
         <label for="heightInput">{{'SIDEBAR_IMAGE_HEIGHT' | translate}}</label>
-        <input [(ngModel)]="optHeight" class="form-control" id="heightInput" name="heightInput" type="number">
+        <input [(ngModel)]="optHeight" [disabled]="selectedFileType === 'CX'" class="form-control" id="heightInput" name="heightInput"
+               type="number">
       </div>
     </div>
 
     <!-- Scale -->
     <div class="form-group mb-2">
       <label for="scaleInput">{{'SIDEBAR_IMAGE_SCALE' | translate}}</label>
-      <input [(ngModel)]="optScale" class="form-control-range" id="scaleInput" max="10"
-             min="1" name="scaleInput" type="range">
+      <input [(ngModel)]="optScale" [disabled]="selectedFileType === 'CX'" class="form-control-range" id="scaleInput"
+             max="10" min="1" name="scaleInput"
+             type="range">
       <small>{{'SIDEBAR_IMAGE_SCALE_HINT' | translate}}</small>
     </div>
-  </form>
-
-  <button (click)="downloadImage()" *ngIf="selectedFileType"
-          class="btn btn-lg btn-block btn-success">
-    {{'SIDEBAR_IMAGE_BTN_DOWNLOAD' | translate}}
-  </button>
+  </div>
 
 
-  <a [routerLink]="['']"
-     class="btn btn-block btn-lg btn-primary mt-5 mb-3"
-     data-toggle="tooltip"
-     container="body"
-     openDelay="1000"
-     ngbTooltip="{{'LOST'|translate}}"
-     placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-     role="button">
-    <fa-icon [icon]="faHome"></fa-icon>
-  </a>
-</div>
+</form>
+
