--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -80,5 +80,25 @@
   {{'SIDEBAR_COMPARE_ABOUT_3_2' | translate}}
 </p>
 
+<hr>
+
+<div class="row small mb-4">
+  <div class="col">
+    <a href="https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/misit/" target="_blank">{{'IMPRESSUM_1' | translate}}</a>
+  </div>
+  <div class="col">
+    <a href="https://www.sys-med.de/en/junior-research-groups/multipath/" target="_blank">{{'IMPRESSUM_2' | translate}}</a>
+  </div>
+  <div class="col">
+    <a href="https://www.uni-augsburg.de/en/kontakt/" target="_blank">{{'IMPRESSUM_3' | translate}}</a>
+  </div>
+  <div class="col">
+    <a href="https://www.uni-augsburg.de/de/impressum/datenschutz/" target="_blank">{{'IMPRESSUM_4' | translate}}</a>
+  </div>
+  <div class="col">
+    <a href="https://www.uni-augsburg.de/de/impressum/" target="_blank">{{'IMPRESSUM_5' | translate}}</a>
+  </div>
+</div>
+
 
 
